unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/adroll__AdRollCompanyListsAccountScores__c.object-meta.xml
<CustomObject>
    <label>RollWorks Account Data</label>
    <nameField>
        <displayFormat>RS-{0000}</displayFormat>
        <label>RollWorks Account Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Account Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>