unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Account_Groups__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account_Groups__c</fullName>
    <description>Comma-separated list of Account Group names</description>
    <inlineHelpText>Comma-separated list of Account Group names</inlineHelpText>
    <label>Account Groups</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>