unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Account_Id__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RollWorks Account Data</relationshipLabel>
    <relationshipName>RollWorksCompanyListsScores</relationshipName>
    <type>Lookup</type>
</CustomField>