unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account_Stage__c</fullName>
    <label>Journey Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>