unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Account_Stage_as_of__c.field-meta.xml
<CustomField>
    <fullName>adroll__Account_Stage_as_of__c</fullName>
    <description>Date When the RollWorks Journey Stage was last updated</description>
    <inlineHelpText>Date When the RollWorks Journey Stage was last updated</inlineHelpText>
    <label>Journey Stage as of</label>
    <type>Date</type>
</CustomField>