unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Advertisable_EID__c.field-meta.xml
<CustomField>
    <fullName>adroll__Advertisable_EID__c</fullName>
    <label>Advertisable EID</label>
    <length>22</length>
    <type>Text</type>
</CustomField>