unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Company_List_Id__c.field-meta.xml
<CustomField>
    <fullName>adroll__Company_List_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company List</label>
    <referenceTo>adroll__AdRollSegment__c</referenceTo>
    <relationshipLabel>RollWorks Account Data</relationshipLabel>
    <relationshipName>RollWorksCompanyListsScores</relationshipName>
    <type>Lookup</type>
</CustomField>