unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Engagement_Level__c.field-meta.xml
<CustomField>
    <fullName>adroll__Engagement_Level__c</fullName>
    <label>Spike Level</label>
    <length>30</length>
    <type>Text</type>
</CustomField>