unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Engagement_Raw_Score__c.field-meta.xml
<CustomField>
    <fullName>adroll__Engagement_Raw_Score__c</fullName>
    <label>Spike Raw Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>