unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Engagement_Score_Reason__c.field-meta.xml
<CustomField>
    <fullName>adroll__Engagement_Score_Reason__c</fullName>
    <label>Spike Score Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>