unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__ICP_EID__c.field-meta.xml
<CustomField>
    <fullName>adroll__ICP_EID__c</fullName>
    <label>ICP EID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>