unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Last_Surge_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>adroll__Last_Surge_Timestamp__c</fullName>
    <description>DateTime When the RollWorks Spike Score was last spiked</description>
    <inlineHelpText>DateTime When the RollWorks Spike Score was last spiked</inlineHelpText>
    <label>Last Spike Timestamp</label>
    <type>DateTime</type>
</CustomField>