unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Score__c.field-meta.xml
<CustomField>
    <fullName>adroll__Score__c</fullName>
    <label>Fit Grade</label>
    <length>50</length>
    <type>Text</type>
</CustomField>