unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Score_Type__c.field-meta.xml
<CustomField>
    <fullName>adroll__Score_Type__c</fullName>
    <description>This field is to identify the type of score to build URL RollWorks Scores field. Do not modify the values of this field.</description>
    <label>Score Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>