unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__TAL_Name__c.field-meta.xml
<CustomField>
    <fullName>adroll__TAL_Name__c</fullName>
    <label>Account List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>