unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Unique_Visitors__c.field-meta.xml
<CustomField>
    <fullName>adroll__Unique_Visitors__c</fullName>
    <inlineHelpText>Unique Visitors aggregated over 30 days</inlineHelpText>
    <label>Unique Visitors (last 30 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>