unpackaged/main/default/objects/adroll__AdRollCompanyListsAccountScores__c/fields/adroll__Unique_Visitors_as_of__c.field-meta.xml
<CustomField>
    <fullName>adroll__Unique_Visitors_as_of__c</fullName>
    <description>Date When the Unique Visitors was last updated</description>
    <inlineHelpText>Date When the Unique Visitors was last updated</inlineHelpText>
    <label>Unique Visitors as of</label>
    <type>Date</type>
</CustomField>